Fix footer sub-elemnts aligning

--- a/src/components/ExtraInfoDialog/_ExtraInfoDialog.scss
+++ b/src/components/ExtraInfoDialog/_ExtraInfoDialog.scss
@@ -12,7 +12,7 @@
 
       &-footer-actions {
         display: flex;
-        justify-content: space-between;
+        justify-content: center;
         align-items: center;
 
         .bp3-button{
